<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FileTransfer</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="action_settings">Settings</string>
    
    <string name="card_firstname">First Name</string>
    <string name="card_lastname">Last Name</string>
    <string name="card_workplace">Work Place</string>
    <string name="edit_card_workplace">Job Title - Organization</string>
    <string name="card_demo_value">ThisIsDemo Value</string>
    
    <string name="activity_edit_card_title">Edit Card</string>
    <string name="menu_item_edit_card_save">Save</string>
    <string name="menu_item_edit_card_cancel">Cancel</string>
    
    <string name="activity_edit_card_select_picture">Select profile picture</string>

    
</resources>
