<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_5dp"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/DarkGray" >

            <ImageView
                android:id="@+id/imv_edit_card_profile_picture"
                android:layout_width="@dimen/card_edit_image_size"
                android:layout_height="@dimen/card_edit_image_size"
                android:src="@drawable/icon_user_no_profile_picture" />

            <ImageView
                android:id="@+id/imv_edit_card_edit_picture"
                android:layout_width="@dimen/card_edit_width"
                android:layout_height="@dimen/card_edit_height"
                android:layout_alignParentTop="true"
                android:layout_alignRight="@+id/imv_edit_card_profile_picture"
                android:src="@drawable/icod_card_edit" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/et_edit_first_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/card_firstname"
                android:selectAllOnFocus="true"
                android:maxLines="1" >
            </EditText>

            <EditText
                android:id="@+id/et_edit_last_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/card_lastname"
                android:selectAllOnFocus="true"
                android:maxLines="1" />
        </LinearLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/et_edit_workplace"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:selectAllOnFocus="true"
        android:hint="@string/edit_card_workplace"
        android:maxLines="1" >
    </EditText>

</LinearLayout>